Delete customer and order
add a new column to let user delete customer and order

--- a/AngularJSProject.csproj
+++ b/AngularJSProject.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\styles.scss" />
+    <Content Include="Gemfile" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
