--- a/AngularJSProject.csproj
+++ b/AngularJSProject.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Content Include="css\styles.scss" />
     <Content Include="Gemfile" />
+    <Content Include="README.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
